--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
         run: npm install
 
       - name: Run test script
-        run: bash ./test-lint.sh
+        run: bash ./sanity-check.sh
