--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^22.14.1",
     "@typescript-eslint/rule-tester": "^8.30.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript-eslint": "^8.30.1"
   }
 }
