--- a/package.json
+++ b/package.json
@@ -27,17 +27,25 @@
   ],
   "scripts": {
     "build": "npx tsc --build ./tsconfig.json",
-    "test": "./test-lint.sh",
+    "test": "mocha 'dist/tests/**/**.test.js'",
+    "test:coverage": "c8 npm test",
     "lint": "npx eslint sample_cases/",
-    "watch": "npx tsc --build ./tsconfig.json --watch"
+    "watch": "npx tsc --build ./tsconfig.json --watch",
+    "spell-check": "cspell \"**/*.{ts,js,md}\"",
+    "prettier-fix": "prettier --check --write \"**/*.{ts,js,json,md}\""
   },
   "peerDependencies": {
     "eslint": ">=8.0.0"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
     "@typescript-eslint/rule-tester": "^8.30.1",
+    "c8": "^10.1.3",
+    "cspell": "^9.0.1",
+    "mocha": "^11.2.2",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript-eslint": "^8.30.1"
