--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "npx tsc --build ./tsconfig.json",
     "test": "mocha 'dist/tests/**/**.test.js'",
     "test:coverage": "c8 npm test",
-    "lint": "npx eslint sample_cases/",
+    "lint": "npx eslint plugins/ tests/",
     "watch": "npx tsc --build ./tsconfig.json --watch",
     "spell-check": "cspell \"**/*.{ts,js,md}\"",
     "prettier-check": "prettier --check \"**/*.{ts,js,json,md}\"",
@@ -39,6 +39,7 @@
     "eslint": ">=8.0.0"
   },
   "devDependencies": {
+    "@schleifner/eslint-config-base": "^2.0.0",
     "@types/eslint": "^9.6.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
