--- a/.c8rc.json
+++ b/.c8rc.json
@@ -1,8 +1,6 @@
 {
   "all": true,
-  "include": [
-    "dist/plugins/rules/**/*.js"
-  ],
+  "include": ["dist/plugins/rules/**/*.js"],
   "reporter": ["text", "html", "lcov"],
   "report-dir": "./coverage",
   "check-coverage": true,
