--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "assemblyscript-eslint-plugin",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=16.6.0"
+  },
   "description": "Provides linting plugin for assemblyscript",
   "keywords": [
     "assemblyscript",
@@ -44,6 +47,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
     "@typescript-eslint/rule-tester": "^8.30.1",
+    "@typescript-eslint/utils": "^8.32.1",
     "c8": "^10.1.3",
     "cspell": "^9.0.1",
     "mocha": "^11.2.2",
