--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mocha": "^11.2.2",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
+    "tsc": "^2.0.4",
     "tsx": "^4.19.3",
     "typescript-eslint": "^8.30.1"
   }
