--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   pull_request:
-  push:
-  workflow_dispatch:
+    branches:
+      - "main"
 
 jobs:
   test:
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.3.x'
+          node-version: "22.3.x"
 
       - name: Install dependencies
         run: npm ci
