--- a/package.json
+++ b/package.json
@@ -51,17 +51,16 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
     "@typescript-eslint/rule-tester": "^8.30.1",
-    "@typescript-eslint/utils": "^8.32.1",
     "c8": "^10.1.3",
     "cspell": "^9.0.1",
     "mocha": "^11.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript-eslint": "^8.30.1"
+    "tsx": "^4.19.3"
   },
   "dependencies": {
-    "typescript": "^5.8.3"
+    "@typescript-eslint/utils": "^8.32.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   }
 }
