--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assemblyscript-eslint-plugin",
+  "name": "@schleifner/assemblyscript-eslint-plugin",
   "version": "1.0.0",
   "engines": {
     "node": ">=16.6.0"
@@ -13,6 +13,9 @@
   "homepage": "https://github.com/wasm-ecosystem/assemblyscript-eslint-plugin#readme",
   "bugs": {
     "url": "https://github.com/wasm-ecosystem/assemblyscript-eslint-plugin/issues"
+  },
+  "publishConfig": {
+    "repository": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
@@ -36,7 +39,8 @@
     "watch": "npx tsc --build ./tsconfig.json --watch",
     "spell-check": "cspell \"**/*.{ts,js,md}\"",
     "prettier-check": "prettier --check \"**/*.{ts,js,json,md}\"",
-    "prettier-fix": "prettier --check --write \"**/*.{ts,js,json,md}\""
+    "prettier-fix": "prettier --check --write \"**/*.{ts,js,json,md}\"",
+    "run-all": "npm-run-all --parallel lint test:coverage spell-check prettier-fix"
   },
   "peerDependencies": {
     "eslint": ">=8.0.0"
@@ -47,16 +51,16 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
     "@typescript-eslint/rule-tester": "^8.30.1",
-    "@typescript-eslint/utils": "^8.32.1",
     "c8": "^10.1.3",
     "cspell": "^9.0.1",
     "mocha": "^11.2.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript-eslint": "^8.30.1"
+    "tsx": "^4.19.3"
   },
   "dependencies": {
-    "typescript": "^5.8.3"
+    "@typescript-eslint/utils": "^8.32.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   }
 }
