--- a/docs/launch.example.json
+++ b/docs/launch.example.json
@@ -7,7 +7,12 @@
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-      "args": ["--timeout", "10000", "--colors", "${workspaceFolder}/dist/tests/**/*.js"],
+      "args": [
+        "--timeout",
+        "10000",
+        "--colors",
+        "${workspaceFolder}/dist/tests/**/*.js"
+      ],
       "outFiles": ["${workspaceFolder}/dist/**/*.js"]
     }
   ]
