--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mocha": "^11.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3"
   },
   "dependencies": {
