wip 3; near completion??

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "args": ["--no-timeouts", "--colors", "--inspect-brk", "tests/rules/playground.ts"],
+      "args": [
+        "--no-timeouts",
+        "--colors",
+        "--inspect-brk",
+        "tests/rules/playground.ts"
+      ],
       "runtimeArgs": [
         "--experimental-specifier-resolution=node",
         "--experimental-loader",
